fix: Implement PSI approach